# All-The-Context

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml
bench/: README.md  __init__.py  admissibility_benchmark.py  admissibility_fixtures.json  dense_shadow.py  dense_shadow_benchmark.py  dense_shadow_fixtures.json  hindsight_supplier_adapter.py  lexical_v3_benchmark.py  memory_lab.py  memory_lab_b01.py  memory_lab_b01_config.json  memory_lab_b01_fixtures.json  memory_lab_baseline_ladder_config.json  memory_lab_fixtures.json  memory_lab_m1.py  memory_lab_m1_fixtures.json  memory_lab_m2.py  memory_lab_m2_fixtures.json  memory_lab_m3.py  memory_lab_m3_fixtures.json  memory_lab_o01.py  memory_lab_o01_fixture.json  memory_lab_p01.py  memory_lab_p01_fixtures.json  memory_reliability_fixtures.json  memory_reliability_lab_e01.py  memory_reliability_lab_e01_fixtures.json  memory_reliability_lab_e01b.py  memory_reliability_lab_e01b_fixtures.json  memory_reliability_lab_e02_wave4.py  memory_reliability_lab_e02_wave4_fixtures.json  memory_reliability_spec.json  retrieval_benchmark.py  retrieval_fixtures.json  retrieval_v3_combined.py  retrieval_v3_fixtures.json  retrieval_v3_foundation.py  set_selection_benchmark.py  set_selection_fixtures.json  (+3 more)
docs/: DECISIONS.md  DEMO.md  IMPLEMENTATION_PLAN.md  NON_GOALS.md  REQUIREMENTS_TRACEABILITY.md  RISKS.md  STATUS.md
integrations/: README.md
release/: channel-index.schema.json  keyring.schema.json  ota-manifest.schema.json  release-candidate.schema.json
scripts/: accept_hosted_edge.py  activate_edge_deployment.py  bootstrap.py  build_dashboard.py  build_desktop.py  build_release_assets.py  check_docs.py  check_runner_architecture.py  demo.py  demo_edge_mobile.py  (+18 more)
(+175 files in other folders)
