[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "all-the-context"
version = "0.1.0-beta.1"
description = "A user-owned, portable AI context Core and Relay"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "All The Context contributors"}]
dependencies = [
  "cryptography>=45,<47",
  "fastapi>=0.116,<1",
  "filelock>=3.18,<4",
  "httpx>=0.28,<1",
  "keyring>=25.6,<26",
  "mcp>=1.27,<2",
  "platformdirs>=4.3,<5",
  "pydantic>=2.11,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.3,<2",
  "hypothesis>=6.135,<7",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]
packaging = [
  "pyinstaller>=6.21,<7",
]

[project.scripts]
atc = "allthecontext.cli:main"
atc-core = "allthecontext.core.app:main"
atc-relay = "allthecontext.relay.app:main"
atc-mcp = "allthecontext.mcp_adapter:main"
atc-mcp-http = "allthecontext.mcp_adapter:http_main"
atc-desktop = "allthecontext.desktop:main"

[tool.setuptools]
package-dir = {"" = "packages/allthecontext/src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["packages/allthecontext/src"]

[tool.setuptools.package-data]
allthecontext = ["migrations/**/*.sql", "web/**/*", "update_keys.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["allthecontext"]
mypy_path = "packages/allthecontext/src"
